tests/pass/ty2.tiger
let
	type montype = array of int
in end
