tests/fail/semantic/infixExp-2.tiger
let
      var x : int
in
      x := 1 * "2"
end
